增加了组合模式的实践demo